testsuite/poke.pkl/int-struct-type-diag-2.pk
/* { dg-do compile } */

deftype Foo =
  struct int<65> /* { dg-error "" } */
  {
  };
